# LearnOpenGL

src/1.getting_started/1.1.hello_window/: CMakeLists.txt
src/1.getting_started/1.2.hello_window_clear/: CMakeLists.txt
